samples/_failures_safe/1761227077_347eb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee2f1ae0.c: In function ‘main’:
./samples/SAFE/__tmp_ee2f1ae0.c:134:12: error: missing terminating " character
  134 |     printf("========================
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee2f1ae0.c:134:5: error: expected expression at end of input
  134 |     printf("========================
      |     ^~~~~~
./samples/SAFE/__tmp_ee2f1ae0.c:134:5: error: expected declaration or statement at end of input
